@@ -41,6 +41,8 @@ from tables import *
 import intermediate_tables as intmodule
 import modrequest as mdmodule
 
+import generations
+
 # Some stuff about the project
 author = "(C) 2004,2006 %s <%s>" % ("Libresoft", "cvsanaly@libresoft.es")
 name = "cvsanaly %s - Libresoft Group http://www.libresoft.es" % ("1.0-BETA2")
@@ -59,11 +61,17 @@ Options:
   -u, --user         User name for accesing the database
   -p, --passwd       User password for accessing the database (default empty)
   -d, --database     Database (schema) name
+  -f, --folder       Folder (directory) to store resulting analysis
+                       (default /tmp/cvsanaly)
 
   -h, --hostname     Host running the database server (default is localhost)
   -l, --log-file     Log file name
   -r, --repo-type    Type of repository (cvs|svn), default is svn
   -i, --driver       Output driver (mysql|stdout), default is mysql
+
+  -n, --no-download  Do not download data, assume it is already in the database
+  --do-generations   Do the generations analysis
+  --no-generarions   Don't do the generations analysis (default)
 """
 
 def main():
@@ -71,17 +79,20 @@ def main():
     print credits
 
     # Short (one letter) options. Those requiring argument followed by :
-    short_opts = "hu:p:d:h:l:r:i:"
+    short_opts = "hu:p:d:f:h:l:r:i:n"
     # Long options (all started by --). Those requiring argument followed by =
-    long_opts = [ "help", "user=", "passwd=", "database=", "hostname=", "log-file=", "repo-type", "driver"]
+    long_opts = [ "help", "user=", "passwd=", "database=", "folder=", "hostname=", "log-file=", "repo-type=", "driver=", "no-download", "do-generations", "no-generations"]
 
     # Default options
     passwd = ''
     hostname = 'localhost'
     logfile = ''
+    folder = '/tmp/cvsanaly'
     type = 'svn'
     driver = 'mysql'
-
+    download = True
+    doGenerations = False
+    
     try:
         opts, args = getopt.getopt(sys.argv[1:], short_opts, long_opts)
     except getopt.GetoptError:
@@ -108,6 +119,8 @@ def main():
             passwd = value
         elif opt in ("-d", "--database"):
             database = value
+        elif opt in ("-d", "--folder"):
+            folder = value
         elif opt in ("-h", "--hostname"):
             hostname = value
         elif opt in ("-l", "--log-file"):
@@ -116,33 +129,46 @@ def main():
             type = value
         elif opt in ("-i", "--driver"):
             driver = value
+        elif opt in ("-n", "--no-download"):
+            download = False
+        elif opt in ("--do-generations"):
+            doGenerations = True
+        elif opt in ("--no-generations"):
+            doGenerations = False
+        else:
+            print ('Unknown option ', opt)
+            usage()
 
     # Connect to the database
-#    if passwd == "":
-#        conection = driver + "://" + user + "@" + hostname + "/" + database
-#    else:
     conection = driver + "://" + user + ":" + passwd + "@" + hostname + "/" + database
-#    print conection
         
     db = dbmodule.Database(conection)
 
-    # Create database and tables
-    db.create_database()
-    db.create_table('files',files)
-    db.create_table('commiters',commiters)
-    db.create_table('log',log)
-    db.create_table('modules', modules)
-    db.create_table('commiters_module',commiters_module)
-    db.create_table('comments',comments)
-    db.create_table('cvsanal_fileTypes',cvsanal_fileTypes)
-    db.create_table('cvsanal_temp_commiters',cvsanal_temp_commiters)
-    db.create_table('cvsanal_temp_modules',cvsanal_temp_modules)
-    db.create_table('cvsanal_temp_inequality',cvsanal_temp_inequality)
-    db.create_table('cvsanal_modrequest',cvsanal_modrequest)
+    if download:
+        print "Download data to the database"
+        # Create database and tables
+        db.create_database()
+        db.create_table('files',files)
+        db.create_table('commiters',commiters)
+        db.create_table('log',log)
+        db.create_table('modules', modules)
+        db.create_table('commiters_module',commiters_module)
+        db.create_table('comments',comments)
+        db.create_table('cvsanal_fileTypes',cvsanal_fileTypes)
+        db.create_table('cvsanal_temp_commiters',cvsanal_temp_commiters)
+        db.create_table('cvsanal_temp_modules',cvsanal_temp_modules)
+        db.create_table('cvsanal_temp_inequality',cvsanal_temp_inequality)
+        db.create_table('cvsanal_modrequest',cvsanal_modrequest)
 
-    # CVS/SVN interactive
-    repos = rpmodule.RepositoryFactory.create(type)
-    repos.log(db, logfile)
+        # CVS/SVN interactive
+        repos = rpmodule.RepositoryFactory.create(type)
+        repos.log(db, logfile)
+    else:
+        print "Not downloading data, assuming the database already has it"
+
+
+    if doGenerations:
+        gen = generations.byQuarter(db, folder + '/generations')
 
     db.close()
 
